feat: add username in users entity backend
